# TS_JS_RUST

./: .gitignore  Cargo.toml  README.md  build.rs  setting.json  temp.ts
.github/workflows/: rust.yml
examples/: converted_hello1.js  converted_hello2.js  hello1.ts  hello2.js  hello2.ts  hello_2.ts  swc_hello_1.rs  swc_hello_2.rs  test_swc_convert_time.rs
examples/AndroidSWC/: Cargo.toml
examples/AndroidSWC/src/: main.rs  main.ts
src/: hello.ts  js_rc.rs  lib.rs  main.rs  test_qjs_macro_module.rs  ts_compiler.rs
ts/: converted.js  global.d.ts  hello1.ts  hello2.js  hello2.ts  hello2_tsconfig.json
