[package]
name = "test_type_script"
version = "0.1.0"
edition = "2021"

[dependencies]
swc = "0.282.0"
swc_common = { version = "0.36.2", features = ["tty-emitter"] }
swc_ecma_ast = "0.117.4"
swc_ecma_parser = "0.148.1"
swc_ecma_transforms_typescript = "0.194.2"
swc_ecma_visit = "0.103.3"
pretty_assertions = "1.4.0"
regex = "1.10.5"
anyhow = "1.0.86"
uuid =  { version = "1.10.0", features = ["v4"] }

rquickjs = { version = "0.6.2", features = ["loader", "macro"] }
